fix some layout issues

--- a/app/assets/styles/components/_editors.scss
+++ b/app/assets/styles/components/_editors.scss
@@ -31,33 +31,7 @@
                 display: flex;
                 width: 100%;
             }
-            .bar {
-                display: flex;
-                justify-content: space-around;
-                align-items: flex-end;
-                width: 100%;
-                padding: 0 10px;
-                background-color: color("background-light");
-                height: 50px;
 
-                .columm {
-                    padding: 0 10px;
-                    &.action {
-                        width: 150px;
-                    }
-                    &.url {
-                        flex-grow: 1;
-                    }
-                    &.button {
-                        width: 130px;
-
-                        .input-button.save{
-                            background: color("blue");
-                            border-color: color("blue");
-                        }
-                    }
-                }
-            }
             .viewer-tabs,.editor-tabs {
                 display: none;
                 padding: 0 10px;
@@ -104,29 +78,108 @@
                 border-top: 1px solid color("border");
                 border-bottom: 1px solid color("border");
             }
-            .metadata {
-                display: flex;
-                align-items: center;
-                padding: 0 $grid-gutter/2;
-                border-top: 1px solid color("border");
-                justify-content: flex-end;
-                height: 40px;
-                background-color: color("background-light");
-                .field {
-                    padding-left: $grid-gutter/2;
-                    font-size: 12px;
-                    .label {
-                        color: color("text-light");
-                        margin-right: 5px;
-                    }
-                    .value {
-                        color: color("green-light");
-                        &.-error {
-                            color: #d96c73;
-                        }
-                    }
+        }
+    }
+
+    .request-bar{
+        display: flex;
+        justify-content: space-around;
+        align-items: flex-end;
+        width: 100%;
+        padding: 0 10px;
+        background-color: color("background-light");
+        height: 50px;
+
+        .columm {
+            padding: 0 10px;
+            &.action {
+                width: 150px;
+            }
+            &.url {
+                flex-grow: 1;
+            }
+            &.button {
+                width: 130px;
+
+                .input-button.save{
+                    background: color("blue");
+                    border-color: color("blue");
                 }
             }
         }
+    }
+
+    .request-properties{
+        display: flex;
+        flex:1;
+        flex-direction: column;
+
+        .list {
+            display: flex;
+            align-items: center;
+            height: 40px;
+            background-color: color("background-light");
+            padding: 0 10px;
+            border-bottom: 1px solid color("border");
+        }
+        .item {
+            padding: 10px 0;
+            margin: 0 10px;
+            color: color("text-dark");
+            position: relative;
+            font-size: 13px;
+            transition: all $animation-duration;
+            user-select:none;
+
+            .count{
+                // color:color("green-light");
+            }
+            &:hover {
+                color: color("text-light");
+            }
+            &.-active {
+                color: color("text-light");
+                &:after {
+                    content: "";
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 2px;
+                    background: color("green-light");
+                }
+            }
+        }
+    }
+
+    .request-viewers{
+        display: flex;
+        flex:1;
+        background: green;
+    }
+
+    .request-metadata{
+        display: flex;
+        align-items: center;
+        padding: 0 $grid-gutter/2;
+        border-top: 1px solid color("border");
+        justify-content: flex-end;
+        height: 40px;
+        background-color: color("background-light");
+        .field {
+            padding-left: $grid-gutter/2;
+            font-size: 12px;
+            .label {
+                color: color("text-light");
+                margin-right: 5px;
+            }
+            .value {
+                color: color("green-light");
+                &.-error {
+                    color: #d96c73;
+                }
+            }
+        }
+
     }
 }
